<resources>
    <string name="app_name">TUber</string>
    <string name="tuber">TUber</string>
    <string name="the_easiest_way_to_move">The Easiest Way to Move</string>
    <string name="the_easiest_way_n_to_move">The Easiest Way \n to Move !</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue1">Continue</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="your_email">Your Email</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
</resources>